--- a/index.html
+++ b/index.html
@@ -95,6 +95,6 @@
         <img class="section_4_04" src="img/section_4_04.webp" />
       </div>
     </section>
-    <p id="footer">Made with &hearts; for neel bhaiya</p>
+    <p id="footer">Made with &hearts; </p>
   </body>
 </html>
